Added commant-t build instructions to README
Change-Id: I44ef9ab71e34a6b5e3a5dccaaefcad4f1d45fe39

--- a/README
+++ b/README
@@ -4,3 +4,6 @@ Installation:
     ln -s ~/.vim/vimrc ~/.vimrc
     cd ~/.vim
     git submodule update --init
+    cd ~/.vim/bundle/commant-t
+    bundle install
+    rake make
