--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation:
 
-    git clone http://github.com/drewag/Vim-Files.git ~/.vim
+    git clone git@github.com:drewag/Vim-Files.git ~/.vim
     ln -s ~/.vim/vimrc ~/.vimrc
     cd ~/.vim
     git submodule update --init
